# cpp_brickgame

src/: CMakeLists.txt  Makefile  test
src/brick_game/common/: BaseModel.cc  BaseModel.h  Constants.h  common.h
src/brick_game/snake/: BaseModel.h  SnakeModel.cc  SnakeModel.h  back_snake.cc  back_snake.h  fsm_snake.cc  fsm_snake.h  snake_back.cc  snake_back.h
src/brick_game/tetris/: TetrisModel.cc  Tetromino.cc  Tetromino.h  back_tetris.c  back_tetris.h  fsm_matrix.c  fsm_matrix.h  fsm_tetris.c  fsm_tetris.h  tetris_back.c  tetris_back.h  tetris_back_3.c  tetris_back_3.h
src/controller/: SnakeController.h  TetrisController.h
src/gui/console/: BrickGameConsole.cc
src/gui/console/common/: BaseView.cc  BaseView.h  BrickGameConsoleView.cc  BrickGameConsoleView.h
src/gui/console/snake/: SnakeConsoleView.cc  SnakeConsoleView.h
src/gui/console/tetris/: TetrisConsoleView.cc  TetrisConsoleView.h  tetris_frontend.c  tetris_frontend.h
src/gui/desktop/snake/: View.cc  View.h  View.ui  main.cc
src/static_L/: snake_back.h  tetris_back.h
src/temp/: TetrisModel.h  Tetromino.cc  Tetromino.h
src/tests/: snake_test.cc  tetris_test.cc
